# Transaction-reader

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  email_process.py  email_test.py  main.py  pyproject.toml  register.py  requirements.txt  stori.py  trx_process.py
src/: __init__.py  email_process.py  main.py  register.py  trx_process.py
